objects/URL_Parameters__c.object
<CustomObject><fields>
        <fullName>Case_Opportunity__c</fullName>
        <inlineHelpText>Custom field to store the Case Opportunity field id for use in a custom button to create a Case from an Opportunity</inlineHelpText>
        <label>Case Opportunity</label>
        <length>200</length>
        <type>Text</type>
    </fields><fields>
        <fullName>MySR_Install_Form_Crash_Dump__c</fullName>
        <label>MySR Install Form Crash Dump</label>
        <length>200</length>
        <type>Text</type>
    </fields><fields>
        <fullName>MySR_Install_Form_Installer_Log__c</fullName>
        <label>MySR Install Form Installer Log</label>
        <length>200</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Opportunity_Primary_Contact__c</fullName>
        <description>Custom field to store the Opportunity Primary Contact field id for use in a custom button to create an Opportunity from a Contact</description>
        <label>Opportunity Primary Contact</label>
        <length>200</length>
        <type>Text</type>
    </fields><customSettingsType>Hierarchy</customSettingsType><enableFeeds>false</enableFeeds><label>URL Parameters</label><visibility>Public</visibility></CustomObject>